<resources>
    <string name="app_name">Escape from cat paws</string>

    <!-- entrance strings-->
    <string name="welcome_string">Tap Here to Start!</string>
    <string name="welcome_notes">Zixun Xiang and Yaqing Zhu\'s app</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- Menu bar strings -->
    <string name="toggle_music">Toggle Music</string>
    <string name="back_to_lobby">Lobby</string>
    <string name="quit_game">Quit</string>

    <!-- Home page strings -->
    <string name="home_title">Lobby</string>
    <string name="game_button">new game</string>
    <string name="score_button">scores</string>
    <string name="edit_button">add cat paws</string>
    <string name="reference_button">about</string>
    <string name="title_activity_main2">MainActivity2</string>

    <!-- Game strings -->
    <string name="instruction">Avoid cat paws!\n Click yarn ball to get your random one\n and keep going!</string>
    <string name="game_start">GO!</string>
    <string name="game_is_over">Game Over!</string>
    <string name="game_restart">restart</string>
    <string name="game_score_save">save score</string>
    <string name="game_leave">leave</string>
    <string name="game_share">Share</string>

    <!-- Editing strings -->
    <string name="upload">upload</string>
    <string name="regenerate">Generate cat paws again!</string>
    <string name="submit">submit</string>
    <string name="leave_edit_page">Back</string>
    <string name="edit_intro">Please upload your custom image</string>
    <string name="edit_intro2">Please select one cat paw\n or click reload to generate cat paws again</string>
    <string name="select_gallery">Open album</string>
    <string name="select_camera">Take picture now!</string>
    <string name="select_leave">Back</string>
    <string name="no_img_found">Your stored image is deleted, using default.</string>

    <!-- Score page strings -->
    <string name="score_page_title">Your top 5 scores</string>
    <string name="player_scores">Check your top 5 scores</string>
    <string name="all_user_scores">Check top 5 scores</string>
    <string name="leave_score_page">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music_start">Background music start!</string>
    <string name="no_music_change_during_play">You can not change music during game!</string>
    <string name="need_access">We need file read access!</string>
    <string name="post_score">The new score has been stored</string>
    <string name="gol_score_head">The Global Top 5</string>
    <string name="loc_score_head">Your Top 5 Score</string>
</resources>